src/components/SwapPage.scss
@import "../styles/theme";

div.swapPage {
  min-height: 100vh;
  background: var(--background-main);
  color: var(--text);
  font-size: 16px;
  padding-bottom: 40px;
  box-sizing: border-box; // Make the padding included in height calculation

  button:hover {
    cursor: pointer;
  }

  .content {
    width: 832px;
    margin: 0 auto;
    padding-top: 40px;
    display: flex;
    flex-wrap: wrap;
  }

  .exchangeWarning {
    color: $white;
    background-color: $text-red;
    padding: 8px;
    width: 100%;
    margin-top: 32px;
    display: flex;
    justify-content: center;
  }

  .infoSection {
    width: 100%;
    display: flex;
    margin-top: 32px;

    .title {
      width: 30%;
      margin-left: auto;
      text-align: right;
      svg {
        margin-left: 10px;
        transform: norotate(0deg);
      }
      svg.upsideDown {
        transform: rotate(-180deg);
      }
    }
  }

  .priceTable {
    width: 30%;
    margin-right: auto;
    text-align: left;
    color: var(--text);

    button,
    svg {
      display: inline-block;
      vertical-align: middle;
    }

    button.exchange {
      border: none;
      background: $primary;
      height: 24px;
      margin-left: 4px;
      padding: 0;
      border-radius: 4px;

      &:hover {
        transform: none;
      }
    }

    & > .pair {
      margin-left: 8px;
    }
    & > .value {
      margin-left: 16px;
    }
  }

  .cost {
    text-align: center;
  }

  .advancedOptions {
    width: 100%;
    margin-bottom: 32px;

    .divider {
      display: block;
      width: 100%;
      height: 2px;
      margin: 8px 0;
      background: var(--outline);
    }

    .tableContainer {
      display: none;
    }

    .show {
      display: block;
    }

    .table {
      width: calc(100% - 48px);
      background: var(--background-element);
      margin-top: 16px;
      border: 1px solid var(--outline);
      border-radius: 10px;
      padding: 16px 24px;

      display: flex;
      flex-direction: row;
      justify-content: space-between;

      .parameter .options {
        margin-top: 10px;
      }
    }
  }

  .error {
    width: 100%;
    color: $error;
    font-weight: $normal;
    text-align: center;
    margin-top: 8px;
    display: none;
  }

  button.swap {
    width: 240px;
    height: 48px;
    border: none;
    border-radius: 6px;
    background: $primary;
    color: $text-black;
    font-weight: $bold;
    font-size: 20px;
    letter-spacing: 0.04em;
    box-shadow: var(--shadow);

    margin: 0 auto;

    &:hover,
    &:focus {
      outline: none;
      background-color: $primary-blue;
      color: $text-white;
      box-shadow: var(--shadow-hover);
    }
  }

  button.disabled {
    cursor: not-allowed;
    color: rgba(0, 0, 0, 0.2);

    &:hover {
      background-color: $primary;
      color: rgba(0, 0, 0, 0.2);
      transform: none;
      opacity: 1;
      box-shadow: var(--shadow);
    }
  }

  .info {
    width: 100%;
    text-align: center;
    margin-top: 8px;
    display: none;
  }
  .showInfo,
  .showError {
    display: block;
  }
}

